force-app/main/default/objects/Lead_Score_Threshold__mdt/Lead_Score_Threshold__mdt.object-meta.xml
<CustomObject>
    <description>Faixas de classificacao para score total de leads.</description>
    <label>Lead Score Threshold</label>
    <pluralLabel>Lead Score Thresholds</pluralLabel>
</CustomObject>