force-app/main/default/objects/Lead_Score_Threshold__mdt/fields/MaxScore__c.field-meta.xml
<CustomField>
    <fullName>MaxScore__c</fullName>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>