force-app/main/default/objects/Lead_Score_Threshold__mdt/fields/MinScore__c.field-meta.xml
<CustomField>
    <fullName>MinScore__c</fullName>
    <label>Min Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>