force-app/main/default/objects/Lead_Score_Threshold__mdt/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>